--- a/src/job/stv-job-browser.html
+++ b/src/job/stv-job-browser.html
@@ -228,7 +228,7 @@
                 var statusFilterJobs = this._filterByStatus(jobs);
                 this.set('filteredJobs', statusFilterJobs);
 
-                console.log(this.search);
+                // console.log(this.search);
                 var searchFilterJobs = this._filterBySearch(statusFilterJobs);
                 this.set('filteredJobs', searchFilterJobs);
 
