--- a/src/stv-application-behavior.html
+++ b/src/stv-application-behavior.html
@@ -187,7 +187,7 @@
                         elem.hidden = false;
                     }
                     /*panels*/
-                    console.log(panel);
+                    // console.log(panel);
                 }
             }
 
