--- a/src/file/stv-file-upload.html
+++ b/src/file/stv-file-upload.html
@@ -10,16 +10,15 @@
             display: block;
             position: relative;
             box-sizing: border-box;
-            padding: 20px 30px;
         }
 
-        stv-file-bioformat {
-            /*height: 150px;*/
-            margin-bottom:15px;
+        #main {
+            position: relative;
+            box-sizing: border-box;
+            padding: 15px 25px 20px 25px;
         }
 
         .uploadbar {
-            margin-top: 5px;
             position: relative;
             height: 20px;
             border: 1px solid #d3d3d3;
@@ -46,12 +45,24 @@
             width: 100%;
         }
 
-        .filename {
+        #bioformatsBox {
+            position: relative;
+            box-sizing: border-box;
+            height: 250px;
+            width: 200px;
+            border: 1px solid var(--divider-color);
+            background-color: var(--text-primary-color);
+        }
+
+        #filename {
+            padding: 2px 4px;
             word-break: break-all;
+            border: 1px solid var(--divider-color);
+            background-color: var(--hover-color);
         }
 
         .right {
-            padding-left: 30px;
+            margin-left: 15px;
             display: block;
             position: relative;
             box-sizing: border-box;
@@ -60,57 +71,104 @@
 
         #validator {
             border: 1px solid var(--divider-color);
+            height: 250px;
+        }
+
+        #openFileButton {
+            width: 200px;
+        }
+
+        #uploadButton,
+        #openFileButton {
+            width: 200px;
+            background-color: var(--dark-button-color) !important;
+            color: var(--text-primary-color) !important;
+        }
+
+        #uploadButton:hover,
+        #openFileButton:hover {
+            background-color: var(--light-button-color) !important;
+        }
+
+        #recheckButton {
+            background-color: var(--dark-button-color) !important;
+            color: var(--text-primary-color) !important;
+        }
+
+        #recheckButton:hover {
+            background-color: var(--light-button-color) !important;
+        }
+
+        #footer {
+            box-sizing: border-box;
+            height: 30px;
+            padding: 0 7px;
+            background-color: var(--light-secondary-color);
+            border-top: 1px solid var(--divider-color);
         }
     </style>
     <template>
-        <div class="horizontal layout">
-            <div class="vertical layout center-justified">
-                <label class="stv">File path:</label>
+
+        <div id="main" class="vertical layout">
+            <div class="horizontal layout">
                 <div>
-                    /
-                    <span>{{selectedFolder.path}}</span>
+                    <label class="stv">File upload:</label>
+                    <div id="openFileButton" class="stv-btn stv-btn-shdw" on-click="handleBrowseClick">
+                        Choose file...
+                    </div>
                 </div>
-                <br>
+                <div class="flex" style="margin-left:15px;position:relative;">
+                    <label class="stv">Selected file:</label>
+                    <div class="horizontal layout flex">
+                        <div id="filename" class="flex">{{fileName}}</div>
+                        <div id="recheckButton" class="stv-btn stv-btn-shdw" on-click="handleRecheck">
+                            Re-check
+                        </div>
+                    </div>
+                    <input type="file" hidden id="fileInput" required on-change="handleInputChange" disabled$="{{uploading}}">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="horizontal layout">
                 <div hidden$="{{hideBioformats}}">
                     <label class="stv">Bioformat:</label>
-                    <stv-file-bioformat id="bioformatSelect" bioformats="{{bioformats}}" on-selected-bioformat-change="handleSelectedBioformatChange"></stv-file-bioformat>
+                    <div id="bioformatsBox">
+                        <stv-file-bioformat id="bioformatSelect" bioformats="{{bioformats}}" on-selected-bioformat-change="handleSelectedBioformatChange"></stv-file-bioformat>
+                    </div>
                 </div>
-                <br>
 
+                <!-- <div hidden$="{{hideValidationLog}}" class="right vertical layout"> -->
+                <div class="right vertical layout">
+                    <label class="stv">File validation log:</label>
+                    <stv-validator id="validator" bioformats="{{bioformats}}" on-end="handleValidatorEnd"></stv-validator>
+                </div>
+            </div>
+
+            <br>
+            <div class="horizontal layout">
                 <form id="form">
-                    <div class="stv-btn stv-btn-shdw" on-click="handleBrowseClick" pattern="[a-zA-Z0-9_-]+">
-                        <span>Choose file...</span>
-                    </div>
-                    <br>
-                    <label class="stv">Selected file name:</label>
-
-                    <div class="filename">{{fileName}}</div>
-
-                    <input type="file" hidden id="fileInput" required on-change="handleInputChange" disabled$="{{uploading}}">
-
-                    <br>
-
-                    <!-- <div class="stv-btn stv-btn-shdw" on-click="handleValidate">Upload</div> -->
-                    <div class="stv-btn stv-btn-shdw" on-click="handleForm">Upload</div>
+                    <div id="uploadButton" class="stv-btn stv-btn-shdw" on-click="handleUpload"><i class="fa fa-cloud-upload"></i> Upload</div>
+                    <!-- <div class="stv-btn stv-btn-shdw" on-click="handleValidate" hidden$="{{computeStatusButton(status, 'validation')}}">Validate</div> -->
                 </form>
-                <br>
-
-                <div class="uploadbar" hidden$="{{!uploading}}">
-                    <div id="progressBar" class="uploadprogress"></div>
-                    <div class="uploadtext">
-                        <i class="fa fa-spinner fa-spin"></i>
-                        <span>{{percentProgress}}</span> %
+                <div class="flex" style="margin-left:15px;position:relative;">
+                    <div class="uploadbar flex">
+                        <div id="progressBar" class="uploadprogress"></div>
+                        <div class="uploadtext">
+                            <span hidden$="{{!uploading}}">
+                                <i class="fa fa-spinner fa-spin"></i>
+                                <span>{{percentProgress}}</span> % </span>
+                        </div>
+                        <br>
                     </div>
-                    <br>
                 </div>
-                <span>{{message}}</span>
             </div>
 
-            <div hidden$="{{hideValidationLog}}" class="right vertical layout">
-                <label class="stv">File validation log:</label>
-                <stv-validator id="validator" bioformats="{{bioformats}}" on-end="handleValidatorEnd"></stv-validator>
-            </div>
-
+        </div>
+        <div id="footer" class="horizontal layout center">
+            &nbsp;
+            <span id="message">{{message}}</span>
         </div>
 
     </template>
@@ -151,63 +209,25 @@
                 type: Boolean,
                 value: false
             },
-            status: {
-                type: String,
-                value: 'validation'
-            },
-            hideValidationLog: {
+            validating: {
                 type: Boolean,
-                value: true,
-                observer: 'hideValidationLogChanged'
+                value: false
             }
         },
         ready: function(e) {
             var me = this;
-            if (this.bioformats.length == 0) {
-                /*** Check number of bioformats in order to show the bioformat chooser ***/
-                // console.log("No bioformats selected")
-                this.checkBioformats();
-            }
-
             if (this._parentPanel) {
                 this._parentPanel.addEventListener("close", function(e) {
-                    me.status = "validation";
                     me.$.validator.reset();
                 });
             }
         },
-        checkBioformats: function() {
-            var numberOfBioformats = 0;
-            var bioformatIdx;
-            for (var i = 0; i < this.bioformats.length; i++) {
-                var format = this.bioformats[i];
-                if (format.key) {
-                    numberOfBioformats++;
-                    bioformatIdx = i;
-                }
-            }
-            if (numberOfBioformats == 1) {
-                this.hideBioformats = true;
-                this.selectedBioformat = this.bioformats[bioformatIdx];
-                if (this.selectedBioformat.validator != null) {
-                    this.hideValidationLog = false;
-                }
-            }
-            if (numberOfBioformats == 0) {
-                this.hideBioformats = true;
-                this.selectedBioformat = {
-                    value: 'NONE',
-                    text: 'NONE'
-                };
-                this.hideValidationLog = true;
-            }
-        },
         handleSelectedBioformatChange: function(e) {
-            if (this.$.bioformatSelect.selectedBioformat != null && this.$.bioformatSelect.selectedBioformat.validator != null) {
-                this.hideValidationLog = false;
-            } else {
-                this.hideValidationLog = true;
-            }
+            // if (this.$.bioformatSelect.selectedBioformat != null && this.$.bioformatSelect.selectedBioformat.validator != null) {
+            //     this.hideValidationLog = false;
+            // } else {
+            //     this.hideValidationLog = true;
+            // }
         },
         hideValidationLogChanged: function(e) {
             if (this._parentPanel) {
@@ -216,6 +236,9 @@
         },
         handleBrowseClick: function(e) {
             if (this.uploading == false) {
+                this.$.fileInput.value = null;
+                this.fileName = "None";
+                this.$.validator.reset();
                 this.$.fileInput.click();
             }
         },
@@ -225,10 +248,34 @@
                 var inputFile = this.$.fileInput.files[0];
                 this.fileName = inputFile.name
 
-                this.status = "validation";
+                this.validate();
+
+                // console.log(inputFile.type)
             }
         },
+        handleUpload: function() {
+            var file = this.$.fileInput.files[0];
+            if (file == null) {
+                this.message = "No file selected."
+                return;
+            }
+            if (this.uploading == true) {
+                this.message = "Upload already in progress."
+                return;
+            }
+            if (this.$.validator.errorCount > 0) {
+                this.message = "The file contains errors."
+                return;
+            }
+            if (this.$.validator.warningCount > 0) {
+                if (confirm("File contains warning messages, are you sure?")) {
+                    this.handleForm();
+                    return;
+                }
+            }
 
+            this.handleForm();
+        },
         handleForm: function() {
             var me = this;
             if (this.uploading == false) {
@@ -237,9 +284,6 @@
                 var selBioformat;
                 if (this.$.bioformatSelect.selectedBioformat != null) {
                     selBioformat = this.$.bioformatSelect.selectedBioformat;
-                }
-                if (this.selectedBioformat != null) {
-                    selBioformat = this.selectedBioformat;
                 }
                 if (selBioformat == null) {
                     alert("Please select a bioformat");
@@ -264,28 +308,32 @@
                         callbackProgress: function(chunk, total, response) {
                             me.percentProgress = Math.round((chunk.id / total) * 100);
                             if (chunk.last) {
-                                me.percentProgress = 100;
+                                me.message = "Upload complete.";
+                                me.percentProgress = 0;
                                 me.uploading = false;
-                                me.message = 'Done';
                                 me.$.fileInput.value = null;
-                                me.fileName = '';
+                                me.fileName = 'None';
+                                me.$.validator.reset();
                                 me.fire('need-refresh');
 
                                 var uploadedFile = response.file;
-                                console.log(uploadedFile);
-                                me.fire('file-uploaded', uploadedFile);
+                                me.async(function() {
+                                    me.fire('file-uploaded', uploadedFile);
+                                }, 50);
                             }
                         },
                         callbackExists: function(file) {
-                            console.log('File already exists');
-                            console.log(file);
-                            me.message = 'File already exists with that name.';
                             me.percentProgress = 0;
+                            me.$.validator.reset();
                             me.uploading = false;
+                            me.message = 'File already exists with that name.';
+                            console.log(file);
                         },
                         error: function(msg) {
+                            me.percentProgress = 0;
                             me.$.fileInput.value = null;
-                            me.fileName = '';
+                            me.fileName = 'None';
+                            me.$.validator.reset();
                             me.uploading = false;
                             me.message = msg;
                         }
@@ -304,48 +352,58 @@
             this.fileName = "None";
         },
 
-        handleValidate: function(e) {
+        validate: function(e) {
             /* Check bioformat */
-            var selBioformat;
-            if (this.$.bioformatSelect.selectedBioformat != null) {
-                selBioformat = this.$.bioformatSelect.selectedBioformat;
-            }
-            if (this.selectedBioformat != null) {
-                selBioformat = this.selectedBioformat;
-            }
-            if (selBioformat == null) {
-                alert("Please select a bioformat");
-                return;
-            }
-
-            /* Validate bioformat */
-            var file = this.$.fileInput.files[0];
-            if (selBioformat != null && file != null) {
-                this.$.validator.reset();
-                var validator;
-
-                if (selBioformat.validator) {
-                    if (typeof selBioformat.validator !== "function") {
-                        alert("Validator '" + selBioformat.validator + "' not recognized.");
-                        return;
-                    }
-                    validator = new selBioformat.validator({});
-                } else {
-                    validator = new Validator({});
+            if (this.validating == false) {
+                this.validating = true;
+                var selBioformat;
+                if (this.$.bioformatSelect.selectedBioformat != null) {
+                    selBioformat = this.$.bioformatSelect.selectedBioformat;
+                }
+                if (selBioformat == null) {
+                    alert("Please select a bioformat");
+                    this.validating = false;
+                    return;
                 }
 
-                this.$.validator.validator = validator;
-                this.$.validator.setFile(file);
-                this.$.validator.validate();
+                /* Validate bioformat */
+                var file = this.$.fileInput.files[0];
+
+                if (selBioformat != null && file != null) {
+                    this.$.validator.reset();
+                    var validator;
+
+                    if (selBioformat.validator) {
+                        if (typeof selBioformat.validator !== "function") {
+                            alert("Validator '" + selBioformat.validator + "' not recognized.");
+                            return;
+                        }
+                        validator = new selBioformat.validator({});
+                    } else {
+                        validator = new Validator({});
+                    }
+
+                    this.$.validator.validator = validator;
+                    this.$.validator.setFile(file);
+                    this.$.validator.validate();
+                } else {
+                    this.validating = false;
+                }
             }
 
         },
 
         handleValidatorEnd: function(e) {
-            if (!this.$.validator.errorCount > 0) {
-                // this.status = "update";
-                this.handleForm();
-            }
+            this.validating = false;
+        },
+
+        tplEq: function(prop, value) {
+            return prop == value;
+        },
+
+        handleRecheck: function() {
+            this.$.validator.reset();
+            this.validate();
         }
 
     });
