--- a/src/file/stv-folder-tree.html
+++ b/src/file/stv-folder-tree.html
@@ -1,11 +1,12 @@
 <link rel="import" href="../../../polymer/polymer.html">
 <link rel="import" href="../../../iron-flex-layout/iron-flex-layout-classes.html">
 
+<link rel="import" href="stv-folder-tree-item.html">
 <dom-module id="stv-folder-tree">
     <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
         :host {
-            display: block;
             position: relative;
+            display: block;
             box-sizing: border-box;
             background-color: inherit;
         }
@@ -57,140 +58,6 @@
                         this._createOpenIndex(openIndex, file.f[i]);
                     }
                 }
-            }
-        });
-    </script>
-</dom-module>
-
-<dom-module id="stv-folder-tree-item">
-    <style>
-        :host {
-            position: relative;
-            display: block;
-            box-sizing: border-box;
-            /*width:100%;*/
-            /*overflow: hidden;
-            text-overflow: clip;*/
-        }
-
-        .main {
-            cursor: pointer;
-            border: 1px solid transparent;
-            white-space: nowrap;
-            /*overflow: hidden;
-            text-overflow: clip;*/
-        }
-
-        .main:hover > * {
-            background-color: var(--hover-color)
-        }
-
-        .name:before {
-            font-family: "FontAwesome";
-            display: inline-block;
-            width: 20px;
-            text-align: center;
-            content: '\f07b';
-        }
-
-        .arrow:before {
-            font-family: "FontAwesome";
-            display: inline-block;
-            width: 12px;
-            text-align: center;
-            content: '\f0da';
-        }
-
-        .arrow[open]:before {
-            content: '\f0d7';
-        }
-
-        .arrow[empty]:before {
-            content: '\00a0';
-        }
-
-        .arrow {
-            padding: 2px 0 2px 2px;
-        }
-
-        .name {
-            padding: 2px 2px 2px 0;
-        }
-    </style>
-    <template>
-        <div class="main horizontal layout stv-nosel">
-            <div class="arrow" empty$="{{isEmpty(file.f)}}" open$="{{file.open}}" on-click="handleArrowClick"></div>
-            <div class="name flex" on-click="handleClick" on-dblclick="handleDblclick">{{computeName(file.n)}}</div>
-        </div>
-        <div style="margin-left:7px;" hidden$="{{!file.open}}">
-            <template is="dom-repeat" items="{{file.f}}" as="f">
-                <stv-folder-tree-item file="{{f}}" on-drop="handleDrop" on-dragover="allowDrop">
-                </stv-folder-tree-item>
-            </template>
-        </div>
-    </template>
-    <script>
-        Polymer({
-            is: "stv-folder-tree-item",
-            properties: {
-                file: {
-                    type: Object
-                }
-            },
-            isEmpty: function(f) {
-                return f.length == 0;
-            },
-            computeName: function(name) {
-                if (name.indexOf('anonymous___') != -1) {
-                    name = 'anonymous';
-                }
-                return name;
-            },
-            handleArrowClick: function(e) {
-                this.toggleOpen();
-            },
-            handleDblclick: function(e) {
-                this.toggleOpen();
-            },
-            handleClick: function(e) {
-                this.fire('treeitemclick', {
-                    _id: this.file._id
-                });
-            },
-            toggleOpen: function() {
-                if (this.file.f.length > 0) {
-                    this.set('file.open', !this.file.open);
-                }
-            },
-            allowDrop: function(e) {
-                e.preventDefault();
-                console.log("allow drop 2");
-            },
-            handleDrop: function(e) {
-                e.preventDefault();
-                console.log("DROP");
-                var newParentId = e.currentTarget.file._id;
-                console.log(newParentId);
-                SteviaManager.files.move({
-                    query: {
-                        sid: Cookies("bioinfo_sid"),
-                        fileId: e.dataTransfer.getData("text"),
-                        newId: newParentId
-                    },
-                    request: {
-                        success: function(response) {
-                            if (response.response[0].error == null) {
-                                console.log(response.response[0].results[0])
-                            } else {
-                                console.log(response.response[0].error)
-                            }
-                        },
-                        error: function() {
-                            console.log('Server error, try again later')
-                        }
-                    }
-                });
-                this.fire('need-refresh');
             }
         });
     </script>
