--- a/src/file/stv-file-bioformat.html
+++ b/src/file/stv-file-bioformat.html
@@ -51,7 +51,7 @@
             </template>
             <template is="dom-if" if="{{bioformat.value}}">
                 <div class="firstLevel">
-                    <label class="jso-control" title="{{bioformat.hint}}">
+                    <label class="stv-control" title="{{bioformat.hint}}">
                         <input type="radio" name="bioformat" on-change="handleRadioChange" value="{{bioformat.value}}" checked$="{{isChecked(bioformats, bioformat)}}">
                         <span>
                             <span>{{bioformat.text}}</span>
