--- a/src/validator/stv-validator.html
+++ b/src/validator/stv-validator.html
@@ -205,12 +205,12 @@
             </div>
         </div>
 
-        <jso-panel modal movable closable hidden id="linePreview" on-close="handleCloseLinePreview">
+        <stv-panel modal movable closable hidden id="linePreview" on-close="handleCloseLinePreview">
             <div class="header">
                 <i class="fa fa-view"></i> &nbsp; View line
             </div>
             <div class="container wrapped-text">{{linePreview}}</div>
-        </jso-panel>
+        </stv-panel>
 
 
     </template>
